--- a/src/main/resources/view/MemeGridCard.fxml
+++ b/src/main/resources/view/MemeGridCard.fxml
@@ -7,21 +7,31 @@
 <?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<HBox xmlns:fx="http://javafx.com/fxml/1" fx:id="cardPane" xmlns="http://javafx.com/javafx/8">
+<HBox fx:id="cardPane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
   <GridPane alignment="CENTER" HBox.hgrow="ALWAYS">
     <columnConstraints>
-      <ColumnConstraints hgrow="SOMETIMES" minWidth="250" prefWidth="250"/>
+      <ColumnConstraints hgrow="SOMETIMES" minWidth="250" prefWidth="250" />
     </columnConstraints>
     <VBox alignment="CENTER" minWidth="250" spacing="5" GridPane.columnIndex="0">
       <padding>
-        <Insets top="5" right="5" bottom="5" left="5"/>
+        <Insets bottom="5" left="5" right="5" top="5" />
       </padding>
-      <Label fx:id="id" styleClass="cell_big_label"/>
-      <ImageView fx:id="display" fitHeight="200" fitWidth="200" cache="true" pickOnBounds="true" preserveRatio="true"/>
-      <FlowPane fx:id="tags" alignment="CENTER"/>
-      <Label fx:id="description" styleClass="cell_small_label" text="\$description"/>
+      <Label fx:id="id" styleClass="cell_big_label" />
+      <ImageView fx:id="display" cache="true" fitHeight="200" fitWidth="200" pickOnBounds="true" preserveRatio="true" />
+      <FlowPane fx:id="tags" alignment="CENTER" />
+      <Label fx:id="description" alignment="CENTER" contentDisplay="CENTER" styleClass="cell_small_label" text="\$description" />
+         <Pane prefHeight="24.0" prefWidth="240.0">
+            <children>
+               <Label fx:id="likes" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="193.0" layoutY="4.0" styleClass="cell_small_label" text="\$likes" />
+            </children>
+         </Pane>
     </VBox>
+      <rowConstraints>
+         <RowConstraints />
+      </rowConstraints>
   </GridPane>
 </HBox>
