--- a/src/main/resources/view/UserViewMain.fxml
+++ b/src/main/resources/view/UserViewMain.fxml
@@ -8,7 +8,6 @@
 
 <VBox xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="seedu.address.ui.UserViewController"
-            prefHeight="400.0" prefWidth="600.0">
+            fx:controller="seedu.address.ui.UserViewController">
     <StackPane fx:id="userViewHolder" VBox.vgrow="ALWAYS" />
 </VBox>
