--- a/src/main/resources/view/diary/DiaryPage.fxml
+++ b/src/main/resources/view/diary/DiaryPage.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.ButtonBar?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -9,7 +10,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #403F4C;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
     <left>
         <VBox fx:id="sideBarLeft" prefHeight="200.0" prefWidth="100.0" />
     </left>
@@ -17,31 +18,43 @@
         <VBox fx:id="sideBarRight" prefHeight="200.0" prefWidth="100.0" />
     </right>
    <bottom>
-      <ScrollPane hbarPolicy="NEVER" vbarPolicy="NEVER" BorderPane.alignment="CENTER">
+      <ScrollPane hbarPolicy="NEVER" style="-fx-background-color: #121420;" vbarPolicy="NEVER" BorderPane.alignment="CENTER">
          <content>
-            <ButtonBar fx:id="dayIndexButtonBar" minHeight="-Infinity" minWidth="-Infinity" style="-fx-background-color: #FFFFAA;" />
+            <ButtonBar fx:id="dayIndexButtonBar" minHeight="-Infinity" minWidth="-Infinity" style="-fx-background-color: #121420;" />
          </content>
       </ScrollPane>
    </bottom>
    <center>
-      <GridPane BorderPane.alignment="CENTER">
+      <GridPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" BorderPane.alignment="CENTER">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="70.0" prefWidth="100.0" />
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="30.0" prefWidth="100.0" />
         </columnConstraints>
         <rowConstraints>
           <RowConstraints minHeight="-Infinity" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="-Infinity" vgrow="SOMETIMES" />
         </rowConstraints>
          <BorderPane.margin>
             <Insets bottom="10.0" left="5.0" right="5.0" top="5.0" />
          </BorderPane.margin>
          <children>
-            <ScrollPane hbarPolicy="NEVER" prefHeight="200.0" prefWidth="200.0" vbarPolicy="NEVER" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS">
+            <ScrollPane fx:id="diaryTextScrollPane" prefHeight="200.0" prefWidth="200.0" vbarPolicy="ALWAYS" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowSpan="2147483647" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS">
                <content>
-                  <VBox fx:id="diaryTextPlaceholder" alignment="TOP_CENTER" />
+                  <VBox fx:id="diaryTextPlaceholder" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" style="-fx-background-color: #FFFFAA;">
+                     <children>
+                        <Label fx:id="dayIndexLabel" text="Label" />
+                     </children></VBox>
                </content>
             </ScrollPane>
-            <VBox fx:id="diaryRightPlaceholder" prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS" />
+            <VBox fx:id="diaryRightPlaceholder" minHeight="-Infinity" minWidth="-Infinity" style="-fx-background-color: #040F0F;" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS" />
+            <ButtonBar fx:id="diaryRightButtonBar" buttonMinWidth="50.0" nodeOrientation="LEFT_TO_RIGHT" style="-fx-background-color: #040F0F;" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.valignment="CENTER">
+               <GridPane.margin>
+                  <Insets />
+               </GridPane.margin>
+               <padding>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+               </padding>
+            </ButtonBar>
          </children>
       </GridPane>
    </center>
