--- a/src/main/resources/view/StatusBarFooter.fxml
+++ b/src/main/resources/view/StatusBarFooter.fxml
@@ -8,9 +8,8 @@
 <GridPane styleClass="status-bar" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" minWidth="10" />
+    <ColumnConstraints hgrow="SOMETIMES" minWidth="10" halignment="RIGHT" />
   </columnConstraints>
-  <HBox>
-    <Label fx:id="saveLocationStatus" />
-    <Label fx:id="sessionDetails" alignment="CENTER_RIGHT"/>
-  </HBox>
+    <Label fx:id="sessionDetails" />
+    <Label fx:id="saveLocationStatus" GridPane.columnIndex="1" />
 </GridPane>
