--- a/src/main/resources/view/GameResultPanel.fxml
+++ b/src/main/resources/view/GameResultPanel.fxml
@@ -2,36 +2,68 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.Separator?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Region?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox maxHeight="-Infinity" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@DarkTheme.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
-    <children>
-        <Label fx:id="title" alignment="CENTER" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" styleClass="label-header" text="Title" textAlignment="CENTER" />
-      <HBox minWidth="0.0" prefHeight="30.0" prefWidth="0.0">
-         <children>
-            <Region prefHeight="200.0" HBox.hgrow="ALWAYS" />
-            <ImageView fx:id="badge1" fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true" />
-            <ImageView fx:id="badge2" fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true" />
-            <ImageView fx:id="badge3" fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true" />
-            <Region prefHeight="200.0" HBox.hgrow="ALWAYS" />
-         </children>
-      </HBox>
-      <Region prefHeight="20.0" />
-      <Label fx:id="title1" alignment="CENTER" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" styleClass="label-bright" text="Score:" textAlignment="CENTER" />
-      <Label fx:id="scoreText" alignment="CENTER" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" styleClass="label-header" text="XX" textAlignment="CENTER" />
-      <HBox minWidth="0.0" prefHeight="30.0" prefWidth="0.0">
-         <children>
-            <Region prefHeight="200.0" HBox.hgrow="ALWAYS" />
-            <Label fx:id="title11" alignment="CENTER" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" styleClass="label-bright" text="Time taken: " textAlignment="CENTER" />
-            <Label fx:id="timeTakenText" alignment="CENTER" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" styleClass="label-bright" text="XXs" textAlignment="CENTER" />
-            <Region prefHeight="200.0" HBox.hgrow="ALWAYS" />
-         </children>
-         <padding>
-            <Insets top="10.0" />
-         </padding>
-      </HBox>
-         </children>
-</VBox>
+
+<ScrollPane fitToHeight="true" fitToWidth="true" stylesheets="@DarkTheme.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+   <content>
+      <VBox maxHeight="-Infinity" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefWidth="600.0" stylesheets="@DarkTheme.css">
+          <children>
+              <Label fx:id="title" alignment="CENTER" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" styleClass="label-header" text="Title" textAlignment="CENTER" />
+            <HBox minWidth="0.0" prefHeight="30.0" prefWidth="0.0">
+               <children>
+                  <Region prefHeight="200.0" HBox.hgrow="ALWAYS" />
+                  <ImageView fx:id="badge1" fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true" />
+                  <ImageView fx:id="badge2" fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true" />
+                  <ImageView fx:id="badge3" fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true" />
+                  <Region prefHeight="200.0" HBox.hgrow="ALWAYS" />
+               </children>
+            </HBox>
+            <Region prefHeight="20.0" />
+            <Label fx:id="title1" alignment="CENTER" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" styleClass="label-bright" text="Score:" textAlignment="CENTER" />
+            <Label fx:id="scoreText" alignment="CENTER" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" styleClass="label-header" text="XX" textAlignment="CENTER" />
+            <HBox minWidth="0.0" prefHeight="30.0" prefWidth="0.0">
+               <children>
+                  <Region prefHeight="200.0" HBox.hgrow="ALWAYS" />
+                  <Label fx:id="title11" alignment="CENTER" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" styleClass="label-bright" text="Time taken: " textAlignment="CENTER" />
+                  <Label fx:id="timeTakenText" alignment="CENTER" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" styleClass="label-bright" text="XXs" textAlignment="CENTER" />
+                  <Region prefHeight="200.0" HBox.hgrow="ALWAYS" />
+               </children>
+               <padding>
+                  <Insets top="10.0" />
+               </padding>
+            </HBox>
+            <Region prefHeight="25.0" />
+            <Separator opacity="0.6" prefWidth="200.0" stylesheets="@DarkTheme.css">
+               <padding>
+                  <Insets left="10.0" right="10.0" />
+               </padding>
+            </Separator>
+            <Region prefHeight="8.0" />
+            <VBox id="warningBorder" fx:id="wrongAnswersBox" prefHeight="200.0" prefWidth="100.0">
+               <children>
+                  <Label fx:id="title12" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" styleClass="label-bright" text="Remember these!" textAlignment="CENTER">
+                     <VBox.margin>
+                        <Insets bottom="6.0" left="16.0" top="8.0" />
+                     </VBox.margin>
+                  </Label>
+                  <StackPane fx:id="wrongAnswersList" prefHeight="150.0" prefWidth="200.0">
+                     <padding>
+                        <Insets bottom="4.0" top="4.0" />
+                     </padding>
+                  </StackPane>
+               </children>
+               <VBox.margin>
+                  <Insets bottom="4.0" left="8.0" right="8.0" top="4.0" />
+               </VBox.margin>
+            </VBox>
+               </children>
+      </VBox>
+   </content>
+</ScrollPane>
