--- a/src/main/resources/view/GroupListCard.fxml
+++ b/src/main/resources/view/GroupListCard.fxml
@@ -22,6 +22,7 @@
             <Label fx:id="groupName" styleClass="cell_big_label"></Label>
         </HBox>
         <Label fx:id="groupDescription" styleClass="cell_small_label"></Label>
+        <Label fx:id="groupRemark" styleClass="cell_small_label"></Label>
     </VBox>
 </GridPane>
 </HBox>
