--- a/src/main/resources/view/MainWindow.fxml
+++ b/src/main/resources/view/MainWindow.fxml
@@ -57,11 +57,12 @@
                            <Insets left="10.0" />
                         </HBox.margin>
                      </StackPane>
-                     <AnchorPane fx:id="editorPlaceholder" minHeight="-Infinity" minWidth="-Infinity" prefHeight="210.0" prefWidth="410.0" HBox.hgrow="ALWAYS">
-                        <HBox.margin>
-                           <Insets right="10.0" />
-                        </HBox.margin>
-                     </AnchorPane>
+                     <VBox prefHeight="200.0" prefWidth="100.0">
+                        <children>
+                           <AnchorPane fx:id="editorPlaceholder" minHeight="-Infinity" minWidth="-Infinity" prefHeight="210.0" prefWidth="410.0" />
+                           <AnchorPane fx:id="runCodeResultPlaceholder" minHeight="-Infinity" minWidth="-Infinity" prefHeight="210.0" prefWidth="410.0" />
+                        </children>
+                     </VBox>
                   </children>
                   <VBox.margin>
                      <Insets left="5.0" />
