--- a/src/main/resources/view/RunCodeResult.fxml
+++ b/src/main/resources/view/RunCodeResult.fxml
@@ -84,5 +84,43 @@
             </AnchorPane>
          </content>
       </TitledPane>
+      <TitledPane fx:id="testCasePane11" animated="false" layoutX="10.0" layoutY="35.0" text="Test Case 3">
+         <content>
+            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+               <children>
+                  <VBox layoutX="14.0" layoutY="12.0" prefHeight="224.0" prefWidth="408.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                     <children>
+                        <AnchorPane fx:id="input111" prefHeight="200.0" prefWidth="200.0">
+                           <children>
+                              <Label layoutX="14.0" layoutY="6.0" text="Input" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                 <font>
+                                    <Font name="Consolas" size="12.0" />
+                                 </font>
+                              </Label>
+                              <Label fx:id="input11" layoutY="34.0" prefHeight="17.0" prefWidth="387.0" text="              " AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="34.0" />
+                           </children>
+                        </AnchorPane>
+                        <AnchorPane layoutX="10.0" layoutY="10.0" prefHeight="200.0" prefWidth="200.0">
+                           <children>
+                              <Label layoutX="14.0" layoutY="14.0" prefHeight="17.0" prefWidth="164.0" text="Expected Output" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                              <Label fx:id="expectedOutput11" layoutX="-3.0" layoutY="29.0" prefHeight="17.0" prefWidth="389.0" text="              " AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="34.0" />
+                           </children>
+                        </AnchorPane>
+                        <AnchorPane layoutX="10.0" layoutY="112.0" prefHeight="200.0" prefWidth="200.0">
+                           <children>
+                              <Label layoutX="59.0" layoutY="5.0" prefHeight="17.0" prefWidth="143.0" text="Your Output" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                 <font>
+                                    <Font name="Consolas" size="12.0" />
+                                 </font>
+                              </Label>
+                              <Label fx:id="userOutput11" layoutX="-7.0" layoutY="29.0" prefHeight="17.0" prefWidth="387.0" text="              " AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="34.0" />
+                           </children>
+                        </AnchorPane>
+                     </children>
+                  </VBox>
+               </children>
+            </AnchorPane>
+         </content>
+      </TitledPane>
   </panes>
 </Accordion>
