--- a/src/main/resources/view/itinerary/ItineraryPage.fxml
+++ b/src/main/resources/view/itinerary/ItineraryPage.fxml
@@ -10,17 +10,13 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
-<AnchorPane xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1">
+
+<AnchorPane style="-fx-background-color: #F2DFD7;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <ScrollPane layoutX="186.0" layoutY="186.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
-         <content>
-            <HBox fx:id="dayButtonsContainer" />
-         </content>
-      </ScrollPane>
-      <GridPane layoutX="96.0" layoutY="111.0" AnchorPane.bottomAnchor="200.0" AnchorPane.leftAnchor="400.0" AnchorPane.rightAnchor="400.0" AnchorPane.topAnchor="200.0">
+      <GridPane alignment="CENTER" hgap="20.0" layoutX="96.0" layoutY="111.0" AnchorPane.bottomAnchor="100.0" AnchorPane.leftAnchor="200.0" AnchorPane.rightAnchor="200.0" AnchorPane.topAnchor="100.0">
         <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints halignment="LEFT" />
+            <ColumnConstraints />
         </columnConstraints>
         <rowConstraints>
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -30,10 +26,10 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Label fx:id="nameLabel" text="\$Name" />
+            <Label fx:id="nameLabel" style="-fx-font-size: 20; -fx-font-weight: bold;" text="\$Name" />
             <Label fx:id="startDateLabel" text="\$StartDate" GridPane.rowIndex="1" />
             <Label fx:id="endDateLabel" text="\$EndDate" GridPane.rowIndex="2" />
-            <Label fx:id="destintationLabel" text="\$Destination" GridPane.rowIndex="3" />
+            <Label fx:id="destinationLabel" text="\$Destination" GridPane.rowIndex="3" />
             <Label fx:id="totalBudgetLabel" text="\$TotalBudget" GridPane.rowIndex="4" />
             <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.rowIndex="2">
                <image>
@@ -42,7 +38,12 @@
             </ImageView>
          </children>
       </GridPane>
-      <VBox fx:id="sideBarLeft" prefHeight="200.0" prefWidth="100.0" />
+      <VBox fx:id="sideBarLeft" prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0" />
       <VBox fx:id="sideBarRight" prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+      <ScrollPane fitToWidth="true" layoutX="186.0" layoutY="186.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+         <content>
+            <HBox fx:id="dayButtonsContainer" />
+         </content>
+      </ScrollPane>
    </children>
 </AnchorPane>
