--- a/src/main/resources/view/trips/TripsPage.fxml
+++ b/src/main/resources/view/trips/TripsPage.fxml
@@ -9,12 +9,13 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
+
 <AnchorPane style="-fx-background-color: #F2DFD7;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
-            <VBox style="-fx-background-color: #F2DFD7;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+            <VBox style="-fx-background-color: #F2DFD7;" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                <children>
                   <ScrollPane fitToHeight="true" fitToWidth="true" hbarPolicy="NEVER" minHeight="-Infinity" minWidth="-Infinity" style="-fx-background-color: #F2DFD7;" VBox.vgrow="ALWAYS">
                      <content>
-                        <GridPane fx:id="tripGridPane" alignment="TOP_CENTER" maxHeight="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" style="-fx-background-color: #F2DFD7;">
+                        <GridPane fx:id="tripGridPane" alignment="TOP_CENTER" maxHeight="1.7976931348623157E308" style="-fx-background-color: #F2DFD7;">
                           <columnConstraints>
                             <ColumnConstraints hgrow="SOMETIMES" minWidth="210.0" />
                             <ColumnConstraints hgrow="SOMETIMES" minWidth="210" />
@@ -23,8 +24,8 @@
                               <ColumnConstraints hgrow="SOMETIMES" minWidth="210" />
                           </columnConstraints>
                           <rowConstraints>
-                            <RowConstraints minHeight="360.0" vgrow="SOMETIMES" />
-                            <RowConstraints minHeight="360.0" vgrow="SOMETIMES" />
+                            <RowConstraints vgrow="SOMETIMES" />
+                            <RowConstraints vgrow="SOMETIMES" />
                           </rowConstraints>
                         </GridPane>
                      </content>
@@ -41,7 +42,7 @@
                 <RowConstraints minHeight="-Infinity" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onMouseClicked="#handleAddTrip" prefHeight="35.0" prefWidth="150.0" text="Add Trip" textAlignment="CENTER" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+                  <Button alignment="CENTER" contentDisplay="CENTER" minHeight="35.0" minWidth="150.0" mnemonicParsing="false" onMouseClicked="#handleAddTrip" text="Add Trip" textAlignment="CENTER" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
                      <font>
                         <Font name="Consolas" size="16.0" />
                      </font>
@@ -49,7 +50,7 @@
                         <Insets bottom="5.0" top="5.0" />
                      </GridPane.margin>
                   </Button>
-                  <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="35.0" prefWidth="150.0" text="Help" textAlignment="CENTER" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+                  <Button alignment="CENTER" contentDisplay="CENTER" minHeight="35.0" minWidth="150.0" mnemonicParsing="false" text="Help" textAlignment="CENTER" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
                      <font>
                         <Font name="Consolas" size="16.0" />
                      </font>
@@ -57,7 +58,7 @@
                         <Insets bottom="5.0" top="5.0" />
                      </GridPane.margin>
                   </Button>
-         <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onMouseClicked="#handlePreferences" prefHeight="35.0" prefWidth="150.0" text="Preferences" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+         <Button alignment="CENTER" contentDisplay="CENTER" minHeight="35.0" minWidth="150.0" mnemonicParsing="false" onMouseClicked="#handlePreferences" text="Preferences" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
             <font>
                <Font name="Consolas" size="16.0" />
             </font>
