--- a/src/main/resources/view/itinerary/days/DaysPage.fxml
+++ b/src/main/resources/view/itinerary/days/DaysPage.fxml
@@ -20,7 +20,7 @@
             </content></ScrollPane>
         </children>
     </VBox>
-    <GridPane style="-fx-background-color: #50514F;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+    <GridPane minHeight="35.0" minWidth="150.0" style="-fx-background-color: #50514F;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
         <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="50.0" prefWidth="100.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="50.0" prefWidth="100.0" />
