--- a/src/main/resources/view/CalendarWindow.fxml
+++ b/src/main/resources/view/CalendarWindow.fxml
@@ -1,7 +1,76 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
-<VBox xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
-    <Label text="Calendar View Window" />
+<?import javafx.scene.text.Text?>
+
+<VBox spacing="20" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+    <HBox alignment="BASELINE_CENTER" spacing="30">
+        <Button fx:id="previousMonthButton" text="&lt;&lt;" />
+        <Text fill="white" text="Calendar" />
+        <Button fx:id="nextMonthButton" text="&gt;&gt;" />
+    </HBox>
+    <GridPane alignment="BASELINE_CENTER" prefWidth="600">
+        <StackPane alignment="BASELINE_CENTER" prefHeight="10" prefWidth="200" GridPane.columnIndex="0">
+            <Text fill="white" text="Sunday" />
+        </StackPane>
+        <StackPane alignment="BASELINE_CENTER" prefHeight="10" prefWidth="200" GridPane.columnIndex="1">
+            <Text fill="white" text="Monday" />
+        </StackPane>
+        <StackPane alignment="BASELINE_CENTER" prefHeight="10" prefWidth="200" GridPane.columnIndex="2">
+            <Text fill="white" text="Tuesday" />
+        </StackPane>
+        <StackPane alignment="BASELINE_CENTER" prefHeight="10" prefWidth="200" GridPane.columnIndex="3">
+            <Text fill="white" text="Wednesday" />
+        </StackPane>
+        <StackPane alignment="BASELINE_CENTER" prefHeight="10" prefWidth="200" GridPane.columnIndex="4">
+            <Text fill="white" text="Thursday" />
+        </StackPane>
+        <StackPane alignment="BASELINE_CENTER" prefHeight="10" prefWidth="200" GridPane.columnIndex="5">
+            <Text fill="white" text="Friday" />
+        </StackPane>
+        <StackPane alignment="BASELINE_CENTER" prefHeight="10" prefWidth="200" GridPane.columnIndex="6">
+            <Text fill="white" text="Saturday" />
+        </StackPane>
+    </GridPane>
+    <GridPane gridLinesVisible="true" prefHeight="400" prefWidth="600">
+        <StackPane prefHeight="200" prefWidth="200" style="-fx-background-color: white;" GridPane.columnIndex="0" GridPane.rowIndex="0" />
+        <StackPane prefHeight="200" prefWidth="200" style="-fx-background-color: white;" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+        <StackPane prefHeight="200" prefWidth="200" style="-fx-background-color: white;" GridPane.columnIndex="2" GridPane.rowIndex="0" />
+        <StackPane prefHeight="200" prefWidth="200" style="-fx-background-color: white;" GridPane.columnIndex="3" GridPane.rowIndex="0" />
+        <StackPane prefHeight="200" prefWidth="200" style="-fx-background-color: white;" GridPane.columnIndex="4" GridPane.rowIndex="0" />
+        <StackPane prefHeight="200" prefWidth="200" style="-fx-background-color: white;" GridPane.columnIndex="5" GridPane.rowIndex="0" />
+        <StackPane prefHeight="200" prefWidth="200" style="-fx-background-color: white;" GridPane.columnIndex="6" GridPane.rowIndex="0" />
+        <StackPane prefHeight="200" prefWidth="200" style="-fx-background-color: white;" GridPane.columnIndex="0" GridPane.rowIndex="1" />
+        <StackPane prefHeight="200" prefWidth="200" style="-fx-background-color: white;" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+        <StackPane prefHeight="200" prefWidth="200" style="-fx-background-color: white;" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+        <StackPane prefHeight="200" prefWidth="200" style="-fx-background-color: white;" GridPane.columnIndex="3" GridPane.rowIndex="1" />
+        <StackPane prefHeight="200" prefWidth="200" style="-fx-background-color: white;" GridPane.columnIndex="4" GridPane.rowIndex="1" />
+        <StackPane prefHeight="200" prefWidth="200" style="-fx-background-color: white;" GridPane.columnIndex="5" GridPane.rowIndex="1" />
+        <StackPane prefHeight="200" prefWidth="200" style="-fx-background-color: white;" GridPane.columnIndex="6" GridPane.rowIndex="1" />
+        <StackPane prefHeight="200" prefWidth="200" style="-fx-background-color: white;" GridPane.columnIndex="0" GridPane.rowIndex="2" />
+        <StackPane prefHeight="200" prefWidth="200" style="-fx-background-color: white;" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+        <StackPane prefHeight="200" prefWidth="200" style="-fx-background-color: white;" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+        <StackPane prefHeight="200" prefWidth="200" style="-fx-background-color: white;" GridPane.columnIndex="3" GridPane.rowIndex="2" />
+        <StackPane prefHeight="200" prefWidth="200" style="-fx-background-color: white;" GridPane.columnIndex="4" GridPane.rowIndex="2" />
+        <StackPane prefHeight="200" prefWidth="200" style="-fx-background-color: white;" GridPane.columnIndex="5" GridPane.rowIndex="2" />
+        <StackPane prefHeight="200" prefWidth="200" style="-fx-background-color: white;" GridPane.columnIndex="6" GridPane.rowIndex="2" />
+        <StackPane prefHeight="200" prefWidth="200" style="-fx-background-color: white;" GridPane.columnIndex="0" GridPane.rowIndex="3" />
+        <StackPane prefHeight="200" prefWidth="200" style="-fx-background-color: white;" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+        <StackPane prefHeight="200" prefWidth="200" style="-fx-background-color: white;" GridPane.columnIndex="2" GridPane.rowIndex="3" />
+        <StackPane prefHeight="200" prefWidth="200" style="-fx-background-color: white;" GridPane.columnIndex="3" GridPane.rowIndex="3" />
+        <StackPane prefHeight="200" prefWidth="200" style="-fx-background-color: white;" GridPane.columnIndex="4" GridPane.rowIndex="3" />
+        <StackPane prefHeight="200" prefWidth="200" style="-fx-background-color: white;" GridPane.columnIndex="5" GridPane.rowIndex="3" />
+        <StackPane prefHeight="200" prefWidth="200" style="-fx-background-color: white;" GridPane.columnIndex="6" GridPane.rowIndex="3" />
+        <StackPane prefHeight="200" prefWidth="200" style="-fx-background-color: white;" GridPane.columnIndex="0" GridPane.rowIndex="4" />
+        <StackPane prefHeight="200" prefWidth="200" style="-fx-background-color: white;" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+        <StackPane prefHeight="200" prefWidth="200" style="-fx-background-color: white;" GridPane.columnIndex="2" GridPane.rowIndex="4" />
+        <StackPane prefHeight="200" prefWidth="200" style="-fx-background-color: white;" GridPane.columnIndex="3" GridPane.rowIndex="4" />
+        <StackPane prefHeight="200" prefWidth="200" style="-fx-background-color: white;" GridPane.columnIndex="4" GridPane.rowIndex="4" />
+        <StackPane prefHeight="200" prefWidth="200" style="-fx-background-color: white;" GridPane.columnIndex="5" GridPane.rowIndex="4" />
+        <StackPane prefHeight="200" prefWidth="200" style="-fx-background-color: white;" GridPane.columnIndex="6" GridPane.rowIndex="4" />
+    </GridPane>
 </VBox>
