--- a/src/main/resources/view/GameResultPanel.fxml
+++ b/src/main/resources/view/GameResultPanel.fxml
@@ -46,9 +46,9 @@
                </padding>
             </Separator>
             <Region prefHeight="8.0" />
-            <VBox id="warningBorder" fx:id="wrongAnswersBox" prefHeight="200.0" prefWidth="100.0">
+            <VBox fx:id="wrongAnswersBox" prefHeight="200.0" prefWidth="100.0">
                <children>
-                  <Label fx:id="title12" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" styleClass="label-bright" text="Remember these!" textAlignment="CENTER">
+                  <Label fx:id="title12" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" styleClass="label-header2" text="Remember these!" textAlignment="CENTER">
                      <VBox.margin>
                         <Insets bottom="6.0" left="16.0" top="8.0" />
                      </VBox.margin>
