--- a/src/main/resources/view/LightTheme.css
+++ b/src/main/resources/view/LightTheme.css
@@ -91,14 +91,14 @@
 }
 
 .tag-list .label {
-    -fx-background-color: lightblue;
+    -fx-background-color: royalblue;
     -fx-padding: 1 3 1 3;
     -fx-border-radius: 2;
     -fx-background-radius: 2;
     -fx-font-size: 11;
     -fx-font-family: "Segoe UI";
     -fx-font-weight: bold;
-    -fx-text-fill: #404040;
+    -fx-text-fill: #e0e0e0;
 }
 
 .status-bar-root {
