--- a/src/main/resources/view/PatientListCard.fxml
+++ b/src/main/resources/view/PatientListCard.fxml
@@ -40,6 +40,10 @@
       <Label fx:id="phone" styleClass="cell_small_label" text="\$phone" />
       <Label fx:id="age" styleClass="cell_small_label" text="\$age" />
       <Label fx:id="priority" styleClass="cell_small_label" text="\$priority" />
+      <Label fx:id="bloodType" styleClass="cell_small_label" text="\$bloodType" />
+      <Label fx:id="tissueType" styleClass="cell_small_label" text="\$tissueType" />
+      <Label fx:id="organ" styleClass="cell_small_label" text="\$organ" />
+      <Label fx:id="doctorInCharge" styleClass="cell_small_label" text="\$doctorInCharge" />
     </VBox>
       <rowConstraints>
          <RowConstraints />
