--- a/src/main/resources/view/DashboardPanel.fxml
+++ b/src/main/resources/view/DashboardPanel.fxml
@@ -3,7 +3,13 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.VBox?>
 
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.HBox?>
 <VBox xmlns:fx="http://javafx.com/fxml/1"
       prefHeight="400.0" prefWidth="600.0">
-    <TextField fx:id="dummyField" />
+    <HBox VBox.vgrow="ALWAYS">
+        <StackPane fx:id="folderStructurePlaceholder" VBox.vgrow="ALWAYS"/>
+    </HBox>
+    <HBox>
+    </HBox>
 </VBox>
