--- a/src/main/resources/view/ReportWindow.fxml
+++ b/src/main/resources/view/ReportWindow.fxml
@@ -2,6 +2,10 @@
 
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.control.Button?>
 <VBox xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
-    <Label text="Report Window" />
+    <children>
+        <Label fx:id="lblStatus" />
+        <Button fx:id="btnTest" onMouseClicked="#setTextForLabel"/>
+    </children>
 </VBox>
