Integrated Date into Income

--- a/src/main/resources/view/IncomeListCard.fxml
+++ b/src/main/resources/view/IncomeListCard.fxml
@@ -29,6 +29,7 @@
                 <Label fx:id="description" styleClass="cell_big_label" text="\$description" />
             </HBox>
             <FlowPane fx:id="tags" />
+            <Label fx:id="date" styleClass="cell_small_label" text="\$date" />
             <Label fx:id="amount" styleClass="cell_small_label" text="\$amount" />
             <Label fx:id="name" styleClass="cell_small_label" text="\$name" />
             <Label fx:id="phone" styleClass="cell_small_label" text="\$phone" />
